@@ -7,53 +7,54 @@
 
 <h1>Countries Where Exuberant Ctags is Used</h1>
 
-<pre>
-AR   Argentina
-AU   Australia 
-AT   Austria  
-BE   Belgium
-BR   Brazil
-BN   Brunei
-CA   Canada 
-CN   China
-CZ   Czech Republic
-DK   Denmark
-EE   Estonia
-FI   Finland
-FR   France
-DE   Germany
-GR   Greece
-HK   Hong Kong
-HU   Hungary
-KR   Korea
-IS   Iceland
-IN   India
-IE   Ireland
-IL   Israel
-IT   Italy
-JP   Japan 
-LU   Luxembourg 
-MY   Malaysia
-NL   Netherlands   
-NZ   New Zealand
-NO   Norway   
-PE   Peru
-PL   Poland   
-PT   Portugal   
-RO   Romania
-RU   Russian Federation   
-SG   Singapore
-SI   Slovenia   
-ZA   South Africa  
-SU   Soviet Union
-ES   Spain   
-SE   Sweden   
-CH   Switzerland   
-LK   Sri Lanka
-UA   Ukraine
-UK   United Kingdom   
-US   United States   
-</listing>
+<ol>
+<li><pre>Argentina [AR]</pre></li>
+<li><pre>Australia [AU]</pre></li>
+<li><pre>Austria [AT]</pre></li>
+<li><pre>Belarus [BY]</pre></li>
+<li><pre>Belgium [BE]</pre></li>
+<li><pre>Brazil [BR]</pre></li>
+<li><pre>Brunei [BN]</pre></li>
+<li><pre>Canada [CA]</pre></li>
+<li><pre>China [CN]</pre></li>
+<li><pre>Czech Republic [CZ]</pre></li>
+<li><pre>Denmark [DK]</pre></li>
+<li><pre>Estonia [EE]</pre></li>
+<li><pre>Finland [FI]</pre></li>
+<li><pre>France [FR]</pre></li>
+<li><pre>Germany [DE]</pre></li>
+<li><pre>Greece [GR]</pre></li>
+<li><pre>Hong Kong [HK]</pre></li>
+<li><pre>Hungary [HU]</pre></li>
+<li><pre>Iceland [IS]</pre></li>
+<li><pre>India [IN]</pre></li>
+<li><pre>Ireland [IE]</pre></li>
+<li><pre>Israel [IL]</pre></li>
+<li><pre>Italy [IT]</pre></li>
+<li><pre>Japan [JP]</pre></li>
+<li><pre>Korea [KR]</pre></li>
+<li><pre>Luxembourg [LU]</pre></li>
+<li><pre>Malaysia [MY]</pre></li>
+<li><pre>Netherlands [NL]</pre></li>
+<li><pre>New Zealand [NZ]</pre></li>
+<li><pre>Norway [NO]</pre></li>
+<li><pre>Peru [PE]</pre></li>
+<li><pre>Poland [PL]</pre></li>
+<li><pre>Portugal [PT]</pre></li>
+<li><pre>Romania [RO]</pre></li>
+<li><pre>Russian Federation [RU]</pre></li>
+<li><pre>Singapore [SG]</pre></li>
+<li><pre>Slovenia [SI]</pre></li>
+<li><pre>South Africa [ZA]</pre></li>
+<li><pre>Soviet Union [SU]</pre></li>
+<li><pre>Spain [ES]</pre></li>
+<li><pre>Sri Lanka [LK]</pre></li>
+<li><pre>Sweden [SE]</pre></li>
+<li><pre>Switzerland [CH]</pre></li>
+<li><pre>Ukraine [UA]</pre></li>
+<li><pre>United Kingdom [UK]</pre></li>
+<li><pre>United States [US]</pre></li>
+</ol>
 
 <hr>
 <a href="http:index.html">Back to <strong>Exuberant Ctags</strong></a>
